--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,8 @@
 .card-item:hover{
       background-color: #ffffff05;
 }
+
+.card-gg{
+      padding: 4px 10px;
+      background-color: rgb(0, 0, 0);
+}
